--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
         <!-- NAVBAR -->
 
         <nav id="top-nav" class="hidden">
-            <div id="app-title">民研</div>
+            <div id="app-title">民研アプリ</div>
             <div class="buttons-group">
                 <button id="my-account-button" class="icon-button" type="button"><img src="" alt="icon" class="display-image"></button>
                 <button id="main-kebab-menu" class="icon-button" type="button"><img src="./images/kebab.svg" alt="menu"></button>
